meraculous UPC data
Former-commit-id: 744c356192d103ccae9b6bfd23860e827d0777ce

--- a/doc/paper17/results.tex
+++ b/doc/paper17/results.tex
@@ -308,7 +308,8 @@ processes reduces Portals resources, but runs out of work quickly.
 
 \begin{figure}[ht]
   \center
-  \fbox{\rule{2.5in}{0pt}\rule[-2.5in]{0pt}{4ex}}  
+  %\fbox{\rule{2.5in}{0pt}\rule[-2.5in]{0pt}{4ex}}  
+  \includegraphics[width=.9\linewidth]{plots/meraculous}
   \caption{Meraculous UPC vs PDHT performance($\mu$ sec)}
   \label{fig:meraculous}
 \end{figure}
