Bug: Replace \center with \centering
Former-commit-id: 25cc9ec6d373e83175253c3f6efbae6791036ad4

--- a/doc/paper17/results.tex
+++ b/doc/paper17/results.tex
@@ -74,14 +74,14 @@ performance potential of \pdht.
 \subsection{Communication Operation Costs}
 
 \begin{figure}[ht]
-  \center
+  \centering
   \includegraphics[width=.95\linewidth]{plots/mpilatency}
   \caption{PDHT and MPI Access Latency ($\mu$sec)}
   \label{fig:all-latency}
 \end{figure}
 
 \begin{figure}[ht]
-  \center
+  \centering
   \includegraphics[width=.95\linewidth]{plots/pdhtlatency}
   \caption{PDHT Access Latencies ($\mu$sec)}
   \label{fig:pdht-latency}
@@ -206,14 +206,14 @@ not seen collisions in any of the benchmarks described in this section.
 %Figures~\ref{fig:4} and \ref{fig:5}.
 %
 %\begin{figure}[ht]
-%  \center
+%  \centering
 %  \fbox{\rule{2.5in}{0pt}\rule[-2.5in]{0pt}{4ex}}  
 %  \caption{Sparse-matrix multiplication weak scaling}
 %  \label{fig:4}
 %\end{figure}
 %
 %\begin{figure}[ht]
-%  \center
+%  \centering
 %  \fbox{\rule{2.5in}{0pt}\rule[-2.5in]{0pt}{4ex}}  
 %  \caption{Sparse-matrix multiplication strong scaling}
 %  \label{fig:5}
@@ -242,7 +242,7 @@ the derivative of a function tree is computed with respect to a single
 dimension. 
 
 \begin{figure}[ht]
-  \center
+  \centering
   \includegraphics[width=.75\linewidth]{figs/diff}
   \caption{MADNESS differentiation operation}
   \label{fig:diff}
@@ -263,14 +263,14 @@ Figures~\ref{fig:mad-compress}--\ref{fig:mad-diff} show the performance of the
 Portals-based PDHT implementation relative to the MPI implementation.
 
 \begin{figure}[ht]
-  \center
+  \centering
   \includegraphics[width=.9\linewidth]{plots/compress}
   \caption{MADNESS compression performance ($\mu$ sec)}
   \label{fig:mad-compress}
 \end{figure}
 
 \begin{figure}[ht]
-  \center
+  \centering
   \includegraphics[width=.9\linewidth]{plots/reconstruct}
   \caption{MADNESS reconstruction performance ($\mu$ sec)}
   \label{fig:mad-reconstruct}
@@ -278,7 +278,7 @@ Portals-based PDHT implementation relative to the MPI implementation.
 
 
 \begin{figure}[ht]
-  \center
+  \centering
   \includegraphics[width=.9\linewidth]{plots/diff}
   \caption{MADNESS differentiation performance ($\mu$ sec)}
   \label{fig:mad-diff}
@@ -307,7 +307,7 @@ Portals resources than is typically supported. On the other end, adding
 processes reduces Portals resources, but runs out of work quickly.
 
 \begin{figure}[ht]
-  \center
+  \centering
   %\fbox{\rule{2.5in}{0pt}\rule[-2.5in]{0pt}{4ex}}  
   \includegraphics[width=.9\linewidth]{plots/meraculous}
   \caption{Meraculous UPC vs PDHT performance($\mu$ sec)}
