Update acks to use ACM formatting
Former-commit-id: 4e8c4e89fd78182573fe6e49db446ca79f49f2b9

--- a/doc/paper17/conclusion.tex
+++ b/doc/paper17/conclusion.tex
@@ -23,8 +23,7 @@ managing the sparse spatial and loosely structured data arising in these
 domains.  Experimental results are promising and indicate that Portals can
 provide efficient and productive support for such data structures.
 
-\section*{Acknowledgement}
-
+\begin{acks}
 This work used the Extreme Science and Engineering Discovery Environment
 (XSEDE), which is supported by National Science Foundation grant number
 ACI-1053575.
@@ -33,3 +32,4 @@ We would also like to acknowledge Ryan Grant and Todd Kordenbrock at Sandia
 National Laboratories for their help with Portals-related issues and the
 generous use of Sandia test bed facilities as well as Evangelos Georganas at
 Intel for his assistance with the Meraculous benchmark.
+\end{acks}
