Clean up latency section
Former-commit-id: 9c9a8f192041cad1f8f1ecc184ea185cc6ee493f

--- a/doc/paper17/implementation.tex
+++ b/doc/paper17/implementation.tex
@@ -308,6 +308,7 @@ additional Portal table entries (PTEs) to support the collective,
 synchronization, and counter operations. 
 
 \subsection{Performance Improvements}
+\label{sec:ptl-ext}
 
 {\noindent {\em Progress Thread Elimination:}} A progress thread is a viable
 approach for handling insertion requests, but requires target-side processing
