--- a/doc/paper17/results.tex
+++ b/doc/paper17/results.tex
@@ -13,11 +13,13 @@
 %are connected using a Mellanox\othertm FDR 56Gb/s InfiniBand\othertm fabric.
 
 Performance results were gathered using a prototype implementation of \pdht
-running on a modified version the Portals reference
-implementation~\cite{portals-code}. Results were gathered on the Comet cluster
+running on a version the Portals reference
+implementation~\cite{portals-code} that was modified to support the features
+presented in Section~\ref{sec:ptl-ext}. Results were gathered on the Comet
+cluster
 system at the San Diego Supercomputer Center with access provided through the
 Extreme Science and Engineering Discovery Environment (XSEDE) program. Comet
-contains nodes with several configurations, these experiments were conducted a
+contains nodes with several configurations; these experiments were conducted a
 portion of the 1944 nodes with Intel\regtm Xeon\regtm E5 processors, comprising
 Dell\othertm PowerEdge\othertm C6320 server each with dual 12-core Intel\regtm
 Xeon\regtm E5-2680 processors and 128 gigabytes of memory. Nodes are connected
@@ -26,13 +28,13 @@ using a Mellanox\othertm FDR 56Gb/s InfiniBand\othertm fabric.
 \subsection{Experimental Setup}
 
 To measure the effectiveness of implementing PDHT directly on top of Portals,
-we constructed an MPI version of PDHT. The MPI version provides a similar
-functionality to PDHT and is implemented with separate processes to act as
-initiator and target roles to handle insertion, access, and update requests.
-The MPI version relies on the same hash function to determine rank and match
-bits, but internally uses an efficient hash table on each local
-process~\cite{uthash} to store the data elements, keyed with the same 64-bit
-value returned by the PDHT hash function. 
+we constructed an MPI version of PDHT. The MPI version implements the PDHT
+functionality using a companion processes to act as a PDHT server and handle
+insertion, access, and update requests.  The MPI PDHT companion process is
+implemented using MPI send and receive operations.  It relies on the same hash
+function to determine rank and match bits, but internally stores PDHT elements
+in an efficient hash table on each local process~\cite{uthash}, keyed with the
+same 64-bit value returned by the PDHT hash function. 
 
 %All tests are run using the MPICH 3.2 MPI run-time, configured to use a Portals
 %4 channel for all communication operations.
@@ -40,13 +42,13 @@ value returned by the PDHT hash function.
 Experiments run with OpenMPI are using version 3.0.0, which has been configured
 to use Portals 4 as the message transport layer for all communication
 operations. The MPICH MPI tests are run with version 3.2.1 using Portals 4 as
-the {\tt ch3} interface. The MVAPICH2 tests are run with version 2.1 and the
+the {\tt ch3} netmod. The MVAPICH2 tests are run with version 2.1 and the
 runtime is configured to directly use the InfiniBand\othertm Verbs interface.
 
 One of the primary challenges in deriving performance results for this work is
 that the Portals 4 runtime library was developed as an exploratory framework
 for modeling next-generation hardware offload network processing. As a result,
-Portals message processing is performed by the host processor and
+Portals message processing is performed by the host processor in a Portals-level companion thread and
 incurs higher overheads than would be expected with a hardware accelerated
 implementation. Thus, communication performed through the Portals 4 runtime
 library has not been optimized as extensively as other high-performance network
@@ -73,33 +75,34 @@ performance potential of \pdht.
 
 \subsection{Communication Operation Costs}
 
-\begin{figure}[ht]
+\begin{figure}
   \centering
-  \includegraphics[width=.95\linewidth]{plots/mpilatency}
+  \includegraphics[width=.9\linewidth]{plots/mpilatency}
   \caption{PDHT and MPI Access Latency ($\mu$sec)}
   \label{fig:all-latency}
 \end{figure}
 
-\begin{figure}[ht]
+\begin{figure}
   \centering
-  \includegraphics[width=.95\linewidth]{plots/pdhtlatency}
+  \includegraphics[width=.9\linewidth]{plots/pdhtlatency}
   \caption{PDHT Access Latencies ($\mu$sec)}
   \label{fig:pdht-latency}
 \end{figure}
 
 
-To start with, we evaluate the read latency of our different PDHT
-implementations. As can be seen in Figure~\ref{fig:all-latency}, the latency of
+We start by measuring the read latency of the MPI and Portals PDHT
+implementations in a two node configuration with one process per node. As can
+different be seen in Figure~\ref{fig:all-latency}, the latency of
 the native PDHT implemented directly on Portals is faster than that of the MPI
 implementations tested with both MPICH and OpenMPI using Portals communication
-channels. This microbenchmark tests the latency with match lists of a varying
+channels. This microbenchmark tests the latency with local hash table sizes of a varying
 number of items. The MPI PDHT implementation tested with the MVAPICH2 system
 outperforms all Portals implementations in a raw performance test. We attribute
 this to the different design goals of the two systems as mentioned above. Of
 particular note are the greatly increasing latencies for the initial native
-PDHT implementation. This is caused by the default linked-list searching in the
+PDHT implementation. This is caused by the default $O(N)$ linked-list searching in the
 Portals reference implementation. When using the unordered matching option, the
-native PDHT access times are flat over all match list lengths.
+native PDHT access times are flat $O(1)$ over all match list lengths.
 
 
 Next, we examine the impact of different native PDHT implementation techniques
@@ -205,14 +208,14 @@ not seen collisions in any of the benchmarks described in this section.
 %with non-zero elements. The performance of this benchmark is shown in
 %Figures~\ref{fig:4} and \ref{fig:5}.
 %
-%\begin{figure}[ht]
+%\begin{figure}
 %  \centering
 %  \fbox{\rule{2.5in}{0pt}\rule[-2.5in]{0pt}{4ex}}  
 %  \caption{Sparse-matrix multiplication weak scaling}
 %  \label{fig:4}
 %\end{figure}
 %
-%\begin{figure}[ht]
+%\begin{figure}
 %  \centering
 %  \fbox{\rule{2.5in}{0pt}\rule[-2.5in]{0pt}{4ex}}  
 %  \caption{Sparse-matrix multiplication strong scaling}
@@ -241,7 +244,7 @@ complementary operation. The last operation is {\em differentiation}, in which
 the derivative of a function tree is computed with respect to a single
 dimension. 
 
-\begin{figure}[ht]
+\begin{figure}
   \centering
   \includegraphics[width=.75\linewidth]{figs/diff}
   \caption{MADNESS differentiation operation}
@@ -262,14 +265,14 @@ coefficients at the correct level.
 Figures~\ref{fig:mad-compress}--\ref{fig:mad-diff} show the performance of the
 Portals-based PDHT implementation relative to the MPI implementation.
 
-\begin{figure}[ht]
+\begin{figure}
   \centering
   \includegraphics[width=.9\linewidth]{plots/compress}
   \caption{MADNESS compression performance ($\mu$ sec)}
   \label{fig:mad-compress}
 \end{figure}
 
-\begin{figure}[ht]
+\begin{figure}
   \centering
   \includegraphics[width=.9\linewidth]{plots/reconstruct}
   \caption{MADNESS reconstruction performance ($\mu$ sec)}
@@ -277,7 +280,7 @@ Portals-based PDHT implementation relative to the MPI implementation.
 \end{figure}
 
 
-\begin{figure}[ht]
+\begin{figure}
   \centering
   \includegraphics[width=.9\linewidth]{plots/diff}
   \caption{MADNESS differentiation performance ($\mu$ sec)}
@@ -306,7 +309,7 @@ an ME in Portals. At small scale, this consumes a much greater number of
 Portals resources than is typically supported. On the other end, adding 
 processes reduces Portals resources, but runs out of work quickly.
 
-\begin{figure}[ht]
+\begin{figure}
   \centering
   %\fbox{\rule{2.5in}{0pt}\rule[-2.5in]{0pt}{4ex}}  
   \includegraphics[width=.9\linewidth]{plots/meraculous}
