Update results and plots
Former-commit-id: ad44498fe492c80e52fe5756fecb5e4fc731a441

--- a/doc/paper17/bibdb.bib
+++ b/doc/paper17/bibdb.bib
@@ -616,3 +616,21 @@
  address = {New York, NY, USA},
  keywords = {Key-Value Store, Performance, Programmable Hardware},
 } 
+
+@inproceedings{ georganas:14,
+    author = {Georganas, Evangelos and Bulu\c{c}, Aydin and Chapman, Jarrod and Oliker, Leonid and Rokhsar, Daniel and Yelick, Katherine},
+    title = {Parallel De Bruijn Graph Construction and Traversal for De Novo Genome Assembly},
+    booktitle = {Proceedings of the International Conference for High Performance Computing, Networking, Storage and Analysis},
+    series = {SC '14},
+    year = {2014},
+    isbn = {978-1-4799-5500-8},
+    location = {New Orleans, Louisana},
+    pages = {437--448},
+    numpages = {12},
+    url = {https://doi.org/10.1109/SC.2014.41},
+    doi = {10.1109/SC.2014.41},
+    acmid = {2683642},
+    publisher = {IEEE Press},
+    address = {Piscataway, NJ, USA},
+}
+
