Stash code to prevent bib entry splitting
Former-commit-id: b11ebdfb2fc72210025f509d751c26a0c6aa2d67

--- a/doc/paper17/paper.tex
+++ b/doc/paper17/paper.tex
@@ -29,6 +29,10 @@
 \usepackage{flushend}
 \usepackage{xspace}
 
+% Enabling these settings may help prevent bib entries from being split across
+% pages and causing LaTeX to keel over
+%\clubpenalty=10000
+%\widowpenalty=10000
 
 %\lstloadlanguages{C}
 %\pagestyle{empty}
