--- a/doc/paper17/implementation.tex
+++ b/doc/paper17/implementation.tex
@@ -1,4 +1,4 @@
-/section{Implementation}
+\section{Implementation}
 
 To realize our PGLAS, we have implemented a parallel distributed key/value store, 
 PDHT. A novel aspect of this system is its implementation directly on top of the
