--- a/doc/paper17/abstract.tex
+++ b/doc/paper17/abstract.tex
@@ -1,23 +1,21 @@
 \begin{abstract}
 
-  Many HPC applications rely on Partitioned Global Address Space (PGAS)
-  parallel programming models as a means to efficiently manage shared
-  data located across multiple nodes in a distributed memory system.
-  These models are typically directly addressed which may render them
-  difficult to use with loosely-structured or sparse data. Locating 
-  a given data element with a PGAS can be a complex process with 
-  substantial overhead. Additional overhead may be incurred by performing
-  lookups from remote location resolution structures. Additionally,
-  large data structures may consume memory and create coherence
-  problems that may limit scalability.
-
-  We propose that the matching systems used by implementations of the Message
-  Passing Interface (MPI) can be used to create a separation between 
-  write operations and the physical location that data is stored. This work
-  explores the extension of such structures to establish an indirection
-  layer between incoming read operations and the physical location of the
-  requested object, thereby effectively extending PGAS models with support
-  for logical addressing.
+Many HPC applications have successfully applied Partitioned Global Address
+Space (PGAS) parallel programming models to efficiently manage shared data
+that is distributed across multiple nodes in a distributed memory system.
+However, while the flat addressing model provided by PGAS systems is
+effective for regular array data, it renders such systems difficult to use
+with loosely-structured or sparse data.  This work proposes a logically
+addressed PGLAS model that naturally supports a variety of data models
+through the automatic mapping of an application-defined key space onto the
+underlying distributed memory system.  We present an efficient
+implementation of the PGLAS model in the form of a parallel distributed
+hash table (PDHT) and demonstrate that this model is amenable to offloading
+using the Portals 4 network programming interface.  We demonstrate the
+effectiveness of PDHT using representative applications from the
+computational chemistry and genomics domains.  Results indicate that PGLAS
+models such as PDHT provide a promising new method for parallelizing
+applications with non-regular data.
 
 \end{abstract}
 
