--- a/doc/paper17/bibdb.bib
+++ b/doc/paper17/bibdb.bib
@@ -242,14 +242,14 @@
 }
 
 @techreport{ portals4,
-    author  = { Brian W. Barrett and Ron Brightwell and Scott Hemmert and Kevin
-                Pedretti and Kyle Wheeler and Keith Underwood and Rolf Riesen and
-                Arthur B. Maccabe and Trammell Hudson},
-    title   = {The {Portals} 4.0.2 Network Programming Interface},
+    author  = { Brian W. Barrett and Ron Brightwell and Ryan E. Grant and Scott
+                Hemmert and Kevin Pedretti and Kyle Wheeler and Keith Underwood
+                and Rolf Riesen and Arthur B. Maccabe and Trammell Hudson},
+    title   = {The {Portals} 4.1 Network Programming Interface},
     institution = {Sandia National Laboratories},
-    number  = {SAND2013-3181},
+    number  = {SAND2017-3825},
     month   = {April},
-    year    = 2013
+    year    = 2017
 }
 
 @Misc{portals-code,
